# attendance-system-dlib

./: CMakeLists.txt
inc/: face_recognition_ui.hpp
src/: attendance_report.cpp  face_recognition_ui.cpp  registration_ui.cpp  webcam_face_pose_ex.cpp
